[tool.poetry]
name = "RiceBot"
version = "1.0"
description = "A Twitch Bot Likes ChalDuck for Python."
authors = ["Level ASMer"]

[tool.poetry.dependencies]
python = "^3.8"
twitchobserver = "^0.8.0"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
